<resources>
    <string name="app_name">Avisacitas</string>

    <!--     A     -->
    <string name="accept">Accept</string>
    <string name="accessibility_service_description">This service allows Avisacitas to interact with other applications to automate message sending.</string>
    <string name="accessibility_service_label">Avisacitas Accessibility Service</string>
    <string name="accessibility_service_must_toast">"You must enable the accessibility service"</string>
    <string name="accessibility_service_off">"Accessibility Service not enabled"</string>
    <string name="agree_checkbox">I agree to the Terms of Service and Privacy Policy.</string>
    <string name="agree_privacy_url">https://wachatbot.com/en/terms#privacy</string>
    <string name="agree_terms_url">https://wachatbot.com/en/terms#advise</string>
    <string name="app_description">Use Avisacitas app to automatically send Google Calendar appointment reminders via WhatsApp and SMS for free</string>


    <!--     C     -->
    <string name="cancel">Cancel</string>
    <string name="close_session">Close session</string>
    <string name="company_name">"Company Name"</string>
    <string name="company_name_input">"Enter the company name"</string>
    <string name="customize_message">Customize message</string>


    <!--     E     -->
    <string name="empty" translatable="false"> </string>
    <string name="event_msg_to_send">Msg to send</string>
    <string name="event_name">Event Name</string>
    <string name="event_phone_number">Phone to send reminder</string>
    <string name="event_reminder_date">09:00 26/10/1985</string>
    <string name="event_reminder_type">Event Reminder Type</string>
    <string name="examplemail_example_com" translatable="false">examplemail@example.com</string>


    <!--     M     -->
    <string name="message_custom_text">Message text</string>
    <string name="message_custom_text_input">Enter the message text</string>
    <string name="messaging_service">Messaging Service</string>


    <!--     P     -->
    <string name="play_pause">Play/Pause</string>

    <!--     S     -->
    <string name="sign_up_free">Sign Up for Free</string>
    <string name="subtitle_account">To be able to send reminders for your appointments, we need access to the Google account of the calendar you want to sync.</string>

    <!--     T     -->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_events_queue">Events Queue</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>
    <string name="loading">"Loading: "</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>