<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="@dimen/_5ssp">


    <TextView
        android:id="@+id/event_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_name"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/event_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_1sdp"
        android:text="@string/event_msg_to_send"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/event_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_1sdp"
        android:text="@string/event_phone_number" />

    <TextView
        android:id="@+id/event_reason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_reminder_type" />

    <TextView
        android:id="@+id/event_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_reminder_date" />

</LinearLayout>