<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.gvs.avisacitas.main.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/events_queue"
        android:name="com.gvs.avisacitas.main.ui.eventsQueue.EventsQueueFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_events_queue" />

    <fragment
        android:id="@+id/settings"
        android:name="com.gvs.avisacitas.main.ui.settings.SettingsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_settings" />
</navigation>